--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body,
 
 input:focus {
   outline: none;
-  border-color: rgb(156 163 175);
+  /* border-color: rgb(156 163 175); */
 }
 
 /* @media (prefers-color-scheme: dark) {
