--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9ca3af;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+
+  background-color: #f1f1f1;
+  border-radius: 4px;
+}
+
+
+/* * {
+  scrollbar-gutter: stable ;
+} */
