--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,12 @@
       background-size: cover;
       background-position: center;
     }
+
+    .bg-card-svg {
+      background-image: url('/card-background.svg');
+      /* background-size: cover; */
+      /* background-position: center; */
+    }
   }
 
 
